Use singleton list in place of List.of